--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_margin">16dp</dimen>
+    <dimen name="text_size_h1">28dp</dimen>
+    <dimen name="text_size_h2">24dp</dimen>
+    <dimen name="text_size_h3">20dp</dimen>
+    <dimen name="text_size_h4">18dp</dimen>
+    <dimen name="text_size_h5">16dp</dimen>
+    <dimen name="text_size_h6">14dp</dimen>
+    <dimen name="text_size_subtitle">12dp</dimen>
+    <dimen name="text_size_body">10dp</dimen>
+    <dimen name="text_size_caption">9dp</dimen>
+    <dimen name="text_size_overline">6dp</dimen>
+
+    <dimen name="spacing_large">10dp</dimen>
+    <dimen name="spacing_normal">8dp</dimen>
+    <dimen name="spacing_micro">4dp</dimen>
+
+    <dimen name="listPreferredItemHeight">16dp</dimen>
+    <dimen name="zero">0dp</dimen>
+
+    <!-- Global elevation -->
+    <dimen name="elevation">2dp</dimen>
+
+    <!-- Global image items -->
+    <dimen name="global_item_image_size">50dp</dimen>
+
+    <!-- Radius -->
+    <dimen name="radius_large">16dp</dimen>
+    <dimen name="radius_normal">8dp</dimen>
+    <dimen name="radius_small">3dp</dimen>
+
+    <!-- Toolbars -->
+    <dimen name="toolbar_inset_start">0dp</dimen>
 </resources>
