--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,17 +16,17 @@
         <item name="android:windowLightStatusBar" tools:targetApi="m">?attr/isLightTheme</item>
 
         <!--Material type attributes-->
-        <item name="textAppearanceHeadline1">@style/TextAppearance.Dandelion.Headline1</item>
-        <item name="textAppearanceHeadline2">@style/TextAppearance.Dandelion.Headline2</item>
-        <item name="textAppearanceHeadline3">@style/TextAppearance.Dandelion.Headline3</item>
-        <item name="textAppearanceHeadline4">@style/TextAppearance.Dandelion.Headline4</item>
-        <item name="textAppearanceHeadline5">@style/TextAppearance.Dandelion.Headline5</item>
-        <item name="textAppearanceHeadline6">@style/TextAppearance.Dandelion.Headline6</item>
-        <item name="textAppearanceSubtitle1">@style/TextAppearance.Dandelion.Subtitle</item>
-        <item name="textAppearanceBody1">@style/TextAppearance.Dandelion.Body</item>
-        <item name="textAppearanceBody2">@style/TextAppearance.Dandelion.Body.Bold</item>
-        <item name="textAppearanceCaption">@style/TextAppearance.Dandelion.Caption</item>
-        <item name="textAppearanceOverline">@style/TextAppearance.Dandelion.Overline</item>
+        <item name="textAppearanceHeadline1">@style/TextAppearance.AparatViewer.Headline1</item>
+        <item name="textAppearanceHeadline2">@style/TextAppearance.AparatViewer.Headline2</item>
+        <item name="textAppearanceHeadline3">@style/TextAppearance.AparatViewer.Headline3</item>
+        <item name="textAppearanceHeadline4">@style/TextAppearance.AparatViewer.Headline4</item>
+        <item name="textAppearanceHeadline5">@style/TextAppearance.AparatViewer.Headline5</item>
+        <item name="textAppearanceHeadline6">@style/TextAppearance.AparatViewer.Headline6</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.AparatViewer.Subtitle</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.AparatViewer.Body</item>
+        <item name="textAppearanceBody2">@style/TextAppearance.AparatViewer.Body.Bold</item>
+        <item name="textAppearanceCaption">@style/TextAppearance.AparatViewer.Caption</item>
+        <item name="textAppearanceOverline">@style/TextAppearance.AparatViewer.Overline</item>
 
         <!--Platform attributes-->
         <item name="android:navigationBarColor">@color/primary_darkest</item>
