--- a/app/src/main/res/drawable/ic_profile_place_holder.xml
+++ b/app/src/main/res/drawable/ic_profile_place_holder.xml
@@ -1,5 +1,18 @@
-<vector android:height="24dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M12,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM12,14c-2.67,0 -8,1.34 -8,4v2h16v-2c0,-2.66 -5.33,-4 -8,-4z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="125dp"
+    android:height="125dp"
+    android:viewportWidth="125"
+    android:viewportHeight="125">
+    <path
+        android:pathData="M62.5,62.5m-62.5,0a62.5,62.5 0,1 1,125 0a62.5,62.5 0,1 1,-125 0"
+        android:fillColor="#455a64" />
+    <group>
+        <clip-path android:pathData="M62.5,62.5m-62.5,0a62.5,62.5 0,1 1,125 0a62.5,62.5 0,1 1,-125 0" />
+        <path
+            android:fillColor="#f2f2f2"
+            android:pathData="M63,48.001m-23,0a23,23 0,1 1,46 0a23,23 0,1 1,-46 0" />
+        <path
+            android:fillColor="#f2f2f2"
+            android:pathData="M107.658,95.095a69.371,69.371 0,0 0,-89.324 0A3.749,3.749 0,0 0,17 97.962v19.213a7.663,7.663 0,0 0,7.667 7.659h76.667A7.663,7.663 0,0 0,109 117.175v-17.71c0,-2.615 -0.491,-3.657 -1.342,-4.37z" />
+    </group>
 </vector>
