--- a/app/src/main/res/layout/fragment_video_list.xml
+++ b/app/src/main/res/layout/fragment_video_list.xml
@@ -23,18 +23,6 @@
             android:splitMotionEvents="false"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/iv_filter"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:padding="12dp"
-                android:src="@drawable/ic_filter"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_title_place"
                 android:layout_width="wrap_content"
@@ -54,12 +42,23 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_category_list"
+            android:name="com.hb.aparatviewer.ui.main.videolist.VideoListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="LinearLayoutManager"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/mt_toolbar"
+            tools:context=".ui.videolist.VideoListFragment"
+            tools:listitem="@layout/layout_cateory_item" />
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_video_list"
             android:name="com.hb.aparatviewer.ui.main.videolist.VideoListFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/mt_toolbar"
+            app:layout_constraintTop_toBottomOf="@id/rv_category_list"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:context=".ui.videolist.VideoListFragment"
             tools:listitem="@layout/layout_video_item" />
