--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-
+        <variable
+            name="search"
+            type="com.hb.aparatviewer.ui.search.OnSearchQueryTextChanged" />
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".ui.search.SearchFragment">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/mt_toolbar"
@@ -23,24 +25,12 @@
             android:splitMotionEvents="false"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/iv_search"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:padding="12dp"
-                android:src="@drawable/ic_search"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_title_place"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="title"
+                android:text="Search"
                 android:textAppearance="?textAppearanceHeadline1"
                 android:fontFamily="sans-serif-condensed-light"
                 android:textColor="#000"
@@ -53,16 +43,27 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_category_list"
-            android:name="com.hb.aparatviewer.ui.main.videolist.VideoListFragment"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layoutManager="LinearLayoutManager"
-            android:orientation="horizontal"
+            android:layout_margin="4dp"
             app:layout_constraintTop_toBottomOf="@id/mt_toolbar"
-            tools:context=".ui.videolist.VideoListFragment"
-            tools:listitem="@layout/layout_cateory_item" />
+            app:cardCornerRadius="8dp">
+
+            <EditText
+                android:id="@+id/et_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="search"
+                android:onTextChanged="@{(text, start, before, count) -> search.search(String.valueOf(text))}"
+                android:textAppearance="?textAppearanceBody1"
+                android:layout_margin="4dp"
+                android:gravity="start"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:padding="6dp"/>
+        </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_video_list"
@@ -70,9 +71,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layoutManager="LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/rv_category_list"
+            app:layout_constraintTop_toBottomOf="@id/cv_search"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:context=".ui.videolist.VideoListFragment"
             tools:listitem="@layout/layout_video_item" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
