second page(#10) - fix ui

--- a/app/src/main/res/layout/fragment_video_detail.xml
+++ b/app/src/main/res/layout/fragment_video_detail.xml
@@ -54,12 +54,17 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:maxLines="1"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:fadingEdge="horizontal"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
             android:text="@{video_detail.title}"
             android:textAppearance="?textAppearanceHeadline3"
             android:textColor="@android:color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/iv_profile_picture"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_video_picture"
             app:layout_constraintBottom_toBottomOf="@id/iv_video_picture"
             tools:text="@tools:sample/cities" />
