--- a/app/src/main/res/layout/fragment_video_list.xml
+++ b/app/src/main/res/layout/fragment_video_list.xml
@@ -41,7 +41,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="sans-serif-condensed-light"
                 android:gravity="center"
-                android:text="title"
+                android:text="حسین باکند"
                 android:textAppearance="?textAppearanceHeadline1"
                 android:textColor="#000"
                 android:textSize="24sp"
