--- a/app/src/main/res/layout/layout_video_item.xml
+++ b/app/src/main/res/layout/layout_video_item.xml
@@ -53,13 +53,17 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:maxLines="1"
             android:text="@{video_summary.title}"
-            android:textAppearance="?textAppearanceHeadline3"
+            android:textAppearance="?textAppearanceHeadline4"
             android:textColor="@android:color/black"
-            android:textStyle="bold"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:fadingEdge="horizontal"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
             app:layout_constraintStart_toEndOf="@id/iv_profile_picture"
             app:layout_constraintTop_toBottomOf="@id/cv_video_picture"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:text="@tools:sample/cities" />
 
         <TextView
